pp2/samples/bad2.out

*** Error line 4.
  here is some gobbledy gook;
          ^^^^
*** parse error

